[package]
name = "synkmusic-rpc"
version = "2.0.0"
edition = "2021"
description = "SynkMusic Discord RPC — displays your listening activity as Discord Rich Presence"

[dependencies]
discord-rich-presence = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
