[package]
name = "synkmusic-rpc"
version = "1.0.0"
edition = "2021"
description = "SYNK Music RPC - allows the website to display what you're currently listening to on Discord"

[dependencies]
discord-rich-presence = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
